--- a/style.css
+++ b/style.css
@@ -359,11 +359,10 @@ ul.dropdown li:hover > ul { visibility:visible;}
 /*#colorbox { border:2px solid #697786; background:#fff; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; overflow:hidden;}*/
 #cboxContent { }
 #cboxLoadedContent { }
-#cboxLoadingGraphic { background:url("../images/loading.gif") center center no-repeat;}
+#cboxLoadingGraphic { background:url("img/loading.gif") center center no-repeat;}
 #cboxLoadingOverlay { }
 #cboxTitle { position:absolute; top:-22px; left:0; color:#000;}
 #cboxCurrent { position:absolute; top:-22px; right:205px; text-indent:-9999px;}
-#cboxSlideshow, #cboxPrevious, #cboxNext, #cboxClose { text-indent:-9999px; width:20px; height:20px; position:absolute; top:-20px; background:url("../images/controls.png") 0 0 no-repeat;}
 #cboxPrevious { background-position:0px 0px; right:44px;}
 #cboxPrevious.hover { background-position:0px -25px;}
 #cboxNext { background-position:-25px 0px; right:22px;}
