--- a/style.css
+++ b/style.css
@@ -382,10 +382,18 @@ span.icon-refesh { background-image: url('img/refresh.png'); }
 span.icon-prev { background-image: url('img/prev.png'); }
 span.icon-next { background-image: url('img/next.png'); }
 span.icon-nagios { background-image: url('img/nagios.png'); }
-span.icon-ena_notif { background-image: url('img/ena_notif.png'); }
-span.icon-disa_notif { background-image: url('img/disa_notif.png'); }
 span.icon-ena_popin { background-image: url('img/ena_popin.png'); }
 span.icon-disa_popin { background-image: url('img/disa_popin.png'); }
+
+span.icon-ena_notif { 
+    background-image: url('img/notify.png'); 
+    background-color: #FFE3E4 !important; 
+}
+
+span.icon-disa_notif { 
+    background-image: url('img/disa_notif.png'); 
+    background-color: #D5F4D5 !important; 
+}
 
 
 /** 
