Custom ndash to separate entries on the footer

--- a/style.css
+++ b/style.css
@@ -712,3 +712,8 @@ table#alert tr.blue   td.dark { border-color: #78A8E9; }
 .cboxSlideshow_off #cboxSlideshow { background-position:-100px 0px; right:44px;}
 .cboxSlideshow_off #cboxSlideshow.hover { background-position:-75px -25px;}
 
+span.ndash {
+    display: inline-block;
+    padding-left: 1px;
+    padding-right: 1px;
+}
