--- a/style.css
+++ b/style.css
@@ -119,6 +119,14 @@ a.comment {
   border: 9px solid white;
 }
 
+.opacity_10 {
+  opacity: 0.1;
+  -moz-opacity: 0.1;
+  -khtml-opacity: 0.1;
+  filter: alpha(opacity=10);
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
+}
+
 
 /**
  * Links
