--- a/style-ie.css
+++ b/style-ie.css
@@ -25,3 +25,6 @@ table#top span#metter-wrap select {
       progid:DXImageTransform.Microsoft.dropshadow(OffX=0, OffY=0, Color=#ffffff);
 }
 
+input {
+  margin: -1px;
+}
