ADD style on history popup, ADD color for each history line which indicate the state of the host, ADD contact and contact address for notification history

--- a/style.css
+++ b/style.css
@@ -397,7 +397,32 @@ table#alert td#notif_warning > div {
   padding-bottom: 3px;
 }
 
+/**
+ * History table
+ */
 
+table#history {
+  margin: 0 2px 0 2px ;
+  width: 99%;
+  border: none;
+  background-color: #fff;
+  cursor: default;
+}
+
+table#history th {
+  white-space: nowrap;
+  background-color: #C0C0C0;
+  text-align: left;
+  padding: 3px 2px;
+  color: #FFFFFF;
+  border: 1px solid #C0C0C0;
+}
+
+table#history td {
+  text-align: left;
+  padding: 0px 2px;
+  border: 1px solid #C0C0C0;
+}
 
 /**
  * Box popins
@@ -483,8 +508,6 @@ table#alert tr.yellow    td    { border-color: #EAEA9A; }
 table#alert tr.green     td    { border-color: #A9E89C; }
 table#alert tr.blue      td    { border-color: #A1C2F0; }
 table#alert tr.bluegreen td    { border-color: #9FE8C5; }
-
-th.white { color: white; }
 
              table#alert tr.orange:hover td, 
              table#alert tr.orange td.checkbox, 
