--- a/style.css
+++ b/style.css
@@ -477,6 +477,10 @@ div#box-down input#end { width: 240px; }
 div#box-down input#hour { width: 40px; }
 div#box-down input#minute { width: 40px; }
 div#box-down input#comment { width: 240px; }
+input.readonly {
+  color: #A0A0A0;
+  background-color: #C0C0C0;
+}
 
 
 
@@ -590,7 +594,6 @@ div#box-popup a#fix {
   right: 4px;
   top: 4px;
 }
-
 
 /**
  * ColorBox
