Bug fixes :   - global counter invalid   - remove track on level > 7   - remove dark color on flags column Features added :   - no limit on history query   - add process events info and img on nagios log popup

--- a/style.css
+++ b/style.css
@@ -279,6 +279,7 @@ div#top-fixed-tpad-monitor {
   width: 1px;
 }
 
+
 /**
  * Alert table
  */
@@ -398,10 +399,10 @@ table#alert td#notif_warning > div {
 }
 
 /**
- * Global counter table                                                                                                        
+ * Global counter table
  */
 
-table.glob tr.glob td.glob img,
+table.glob tr.glob td.glob img, 
 table.glob tr.glob td.glob a {
   border: none;
   margin: none;
@@ -504,44 +505,38 @@ table#alert tr.green     td    { border-color: #A9E89C; }
 table#alert tr.blue      td    { border-color: #A1C2F0; }
 table#alert tr.bluegreen td    { border-color: #9FE8C5; }
 
-             table#alert tr.orange:hover td, 
-             table#alert tr.orange td.checkbox, 
-table#alert tr.orange td.flag { 
+table#alert tr.orange:hover td, 
+table#alert tr.orange td.checkbox {
   background-color: #FFD07A;
   border-color: #EEC57A;
 }
 
-             table#alert tr.red:hover td, 
-             table#alert tr.red td.checkbox, 
-table#alert tr.red td.flag { 
+table#alert tr.red:hover td, 
+table#alert tr.red td.checkbox {
   background-color: #FF8F8F;
   border-color: #E89292;
 }
 
-             table#alert tr.yellow:hover td, 
-             table#alert tr.yellow td.checkbox, 
-table#alert tr.yellow td.flag { 
+table#alert tr.yellow:hover td, 
+table#alert tr.yellow td.checkbox {
   background-color: #FFF45C;
   border-color: #ECE258;
 }
 
-             table#alert tr.green:hover td, 
-             table#alert tr.green td.checkbox, 
-table#alert tr.green td.flag {
+table#alert tr.green:hover td, 
+table#alert tr.green td.checkbox {
   background-color: #87F272;
   border-color: #86E173;
 }
 
-             table#alert tr.blue:hover td, 
-             table#alert tr.blue td.checkbox, 
-table#alert tr.blue td.flag {
+table#alert tr.blue:hover td, 
+table#alert tr.blue td.checkbox {
   background-color: #87BAFF;
   border-color: #80ACE8;
 }
 
-             table#alert tr.bluegreen:hover td, 
-             table#alert tr.bluegreen td.checkbox, 
-table#alert tr.bluegreen td.flag {
+table#alert tr.bluegreen:hover td, 
+table#alert tr.bluegreen td.checkbox {
   background-color: #76F0C8;
   border-color: #61E1B8;
 }
